tests/golden/type_errors/array_reduce_non_array.cd
reduce(1, 0, fun (acc, value) { return acc; });
